--- a/style.css
+++ b/style.css
@@ -14,32 +14,36 @@ body {
 .app {
   max-width: 80%;
   margin: auto;
+  padding: 20px 0;
 }
 
-header {
+nav {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
   align-items: center;
-  height: 140px;
-  margin: auto;
+  padding: 30px 0;
+}
+
+nav .logo {
+  flex: 1;
 }
 
 .nav__items {
   display: flex;
-  width: 400px;
-  flex-direction: row;
-  justify-content: space-between;
-  list-style-type: none;
 }
 
-li {
-  color: hsl(236, 13%, 42%);
-  font-size: 15px;
+.nav__items li {
+  list-style: none;
+  margin-left: 30px;
 }
 
 li > a {
   text-decoration: none;
+  color: hsl(236, 13%, 42%);
+  font-size: 15px;
+}
+
+li > a:hover {
+  color: hsl(5, 85%, 63%);
 }
 
 .container {
