--- a/version2/style.css
+++ b/version2/style.css
@@ -1,5 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700;800&display=swap");
 
+:root {
+  --orange: hsl(35, 77%, 62%);
+  --red: hsl(5, 85%, 63%);
+  --bg-white: hsl(36, 100%, 99%);
+  --grayish-blue: hsl(233, 8%, 79%);
+  --parag: hsl(236, 13%, 42%);
+  --title: hsl(240, 100%, 5%);
+}
+
 /* base styling */
 * {
   margin: 0;
@@ -13,19 +22,19 @@ body {
 }
 
 p {
-  color: hsl(236, 13%, 42%);
+  color: var(--parag);
   font-size: 15px;
 }
 
 a {
   text-decoration: none;
-  color: hsl(236, 13%, 42%);
+  color: var(--parag);
 }
 img {
   width: 100%;
 }
 
-/* custom class for flex items */
+/* Utilities || custom  reuseable classes */
 .flex {
   display: flex;
   flex-direction: row;
@@ -33,10 +42,25 @@ img {
   height: 100%;
 }
 
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 30px;
+}
+
+.grid {
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
 /* navbar styling */
 
 .navbar {
-  height: 80px;
+  height: 100px;
 }
 
 .navbar > .flex {
@@ -47,17 +71,81 @@ img {
   list-style: none;
 }
 
-.container {
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 0 30px;
-}
-
 nav a {
   font-size: 15px;
   padding: 10px;
 }
 
 nav a:hover {
-  color: hsl(35, 77%, 62%);
+  color: var(--orange);
+}
+
+/* Hero section styling */
+
+.hero {
+  height: 400px;
+}
+
+.hero .grid {
+  align-items: flex-start;
+}
+
+.main-context {
+  margin-top: 1rem;
+}
+
+.main .grid {
+  align-items: flex-start;
+  grid-template-columns: 45% 55%;
+}
+
+.main h1 {
+  font-weight: 800;
+  font-size: xx-large;
+  line-height: 2.2rem;
+}
+
+.main .flex {
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.main button {
+  padding: 8px 24px;
+  border: none;
+  cursor: pointer;
+  background: var(--red);
+  border-radius: 3px;
+  color: var(--bg-white);
+  transition: 0.15s;
+}
+
+.main button:hover {
+  background: var(--orange);
+}
+
+.sidebar {
+  background: var(--title);
+  color: var(--bg-white);
+  height: 100%;
+  padding: 20px;
+}
+
+.sidebar h2 {
+  color: var(--orange);
+}
+
+.new {
+  border-bottom: 1px solid var(--grayish-blue);
+  padding-bottom: 26px;
+}
+
+.new:last-child {
+  border-bottom: none;
+}
+
+.new h5 {
+  font-size: 15px;
+  margin: 15px 0;
 }
